@@ -23,9 +23,17 @@ import java.io.IOException
 import java.nio.file.Files
 import java.nio.file.Path
 import java.util.*
+import kotlinx.coroutines.Dispatchers
+import kotlinx.coroutines.async
+import kotlinx.coroutines.awaitAll
+import kotlinx.coroutines.coroutineScope
 import kotlin.io.path.absolute
 import kotlin.io.path.absolutePathString
+import kotlin.io.path.createDirectories
 import kotlin.io.path.exists
+import kotlin.io.path.extension
+import kotlin.io.path.isDirectory
+import kotlin.io.path.isRegularFile
 import kotlin.io.path.isWritable
 import elide.exec.ActionScope
 import elide.exec.Task
@@ -160,13 +168,22 @@ internal class JvmBuildConfigurator : BuildConfigurator {
       .resolve("classes") // `.../classes/...`
       .resolve(if (tests) "main" else srcSet.name) // `.../classes/main/...`
 
+    val codegenClassesOutput = state.layout.artifacts
+      .resolve("jvm") // `.dev/artifacts/jvm/...`
+      .resolve("classes") // `.../classes/...`
+      .resolve("codegen") // `.../classes/codegen/...`
+
     val testClassesOutput = if (!tests) null else state.layout.artifacts
       .resolve("jvm") // `.dev/artifacts/jvm/...`
       .resolve("classes") // `.../classes/...`
       .resolve("test") // `.../classes/main/...`
 
     val classOutput = if (tests) testClassesOutput!! else mainClassesOutput
-    val mountedInput = if (tests) mainClassesOutput else null
+    val mountedInputs = buildList {
+      add(mainClassesOutput)
+      add(codegenClassesOutput)
+      if (tests) add(testClassesOutput)
+    }
 
     logging.debug { "Java compiler task dependencies: $dependencies" }
     logging.debug { "Java main classpath: $compileClasspath" }
@@ -270,14 +287,11 @@ internal class JvmBuildConfigurator : BuildConfigurator {
       )
     }
 
-    // main classes should be on classpath in tests mode
-    if (tests) {
-      staticDeps.prepend(mainClassesOutput)
-    }
-
     // prepare compiler configuration
     val env = Environment.host()
-    val inputs = JavaCompiler.sources(srcSet.paths.map { it.path.absolute() }.asSequence())
+    val inputs = JavaCompiler.sources(
+      srcSet.paths.filter { it.path.extension == "java" }.map { it.path.absolute() }.asSequence()
+    )
     val commonSourceRoot = calculateCommonSourceRoot(inputs)
 
     val args = Arguments.empty().toMutable().apply {
@@ -307,7 +321,7 @@ internal class JvmBuildConfigurator : BuildConfigurator {
         compileClasspath?.let { add(it) }
         add(staticDeps)
         additionalDeps?.let { add(it) }
-        mountedInput?.let { prepend(it) }
+        mountedInputs.filterNotNull().filter { it.exists() }.forEach { prepend(it) }
       }.let {
         add(it)
       }
@@ -381,7 +395,7 @@ internal class JvmBuildConfigurator : BuildConfigurator {
   }.describedBy {
     val pluralized = if (srcSet.paths.size == 1) "source file" else "sources"
     val suiteTag = if (srcSet.name == "main") "" else " (suite '${srcSet.name}')"
-    "Compiling ${srcSet.paths.size} Java $pluralized$suiteTag"
+    "Compiling ${srcSet.paths.filter { it.path.extension == "java" }.size} Java $pluralized$suiteTag"
   }.also { javac ->
     config.taskGraph.apply {
       addNode(javac)
@@ -412,7 +426,8 @@ internal class JvmBuildConfigurator : BuildConfigurator {
 
     val processorClasspath = resolver?.classpathProvider(
       object : ClasspathSpec {
-        override val usage: MultiPathUsage = if (tests) MultiPathUsage.TestProcessors else MultiPathUsage.Processors
+        override val usage: MultiPathUsage =
+          if (tests) MultiPathUsage.TestProcessors else MultiPathUsage.Processors
       },
     )?.classpath()
 
@@ -455,6 +470,15 @@ internal class JvmBuildConfigurator : BuildConfigurator {
           )
         )
       }
+    }
+    if (state.manifest.kotlin?.features?.kapt != false) {
+      staticDeps.add(
+        builtinKotlinJarPath(
+          state,
+          JvmLibraries.KOTLIN_KAPT_RUNTIME,
+          KotlinLanguage.VERSION,
+        )
+      )
     }
     if (state.manifest.kotlin?.features?.kotlinx != false) {
       if (state.manifest.kotlin?.features?.coroutines != false) {
@@ -548,24 +572,73 @@ internal class JvmBuildConfigurator : BuildConfigurator {
 
     val kotlincOpts = state.manifest.kotlin?.compilerOptions ?: KotlinJvmCompilerOptions()
     val args = Arguments.empty().toMutable().apply {
-      // @TODO eliminate this
-      add("-Xskip-prerelease-check")
-
       // apply arguments
       addAllStrings(kotlincOpts.collect().toList())
+
+      if (state.manifest.kotlin?.features?.kapt == true && processorClasspath?.isNotEmpty() == true) {
+        val kapt3 = "org.jetbrains.kotlin.kapt3"
+        val kaptOutBase = state.layout.artifacts.resolve("codegen").resolve("kapt")
+        val kaptSources = kaptOutBase.resolve("sources")
+        val kaptClasses = kaptOutBase.resolve("classes")
+        val kaptStubs = kaptOutBase.resolve("stubs")
+        coroutineScope {
+          listOf(kaptSources, kaptClasses, kaptStubs).map {
+            async(Dispatchers.IO) {
+              it.createDirectories()
+            }
+          }.awaitAll()
+        }
+        add("-P")
+        add("plugin:$kapt3:aptMode=stubsAndApt")
+        add("-P")
+        add("plugin:$kapt3:correctErrorTypes=true")
+        add("-P")
+        add("plugin:$kapt3:sources=${kaptSources.absolutePathString()}")
+        add("-P")
+        add("plugin:$kapt3:classes=${kaptClasses.absolutePathString()}")
+        add("-P")
+        add("plugin:$kapt3:stubs=${kaptStubs.absolutePathString()}")
+        if (state.manifest.kotlin?.compilerOptions?.freeCompilerArgs?.contains("-Xjvm-enable-preview") == true) {
+          // preview mode must match for kapt
+          add("-P")
+          add("plugin:$kapt3:javacOption=--enable-preview=true")
+        }
+        processorClasspath.forEach { item ->
+          add("-P")
+          add("plugin:$kapt3:apclasspath=${item.path.absolutePathString()}")
+        }
+      }
+      // add kapt classpath
     }.build()
 
     logging.debug { "Kotlin compiler args: '${args.asArgumentList().joinToString(" ")}'" }
 
+    val effectiveJvmTarget = (
+      state.manifest.kotlin?.compilerOptions?.jvmTarget
+      ?: state.manifest.jvm?.target
+      ?: ElidePackageManifest.JvmTarget.DEFAULT
+    )
+
     // prepare compiler configuration
     val env = Environment.host()
-    val inputs = KotlinCompiler.sources(srcSet.paths.map { it.path.absolute() }.asSequence())
+    val inputs = KotlinCompiler.sources(
+      srcSet.paths.map { it.path.absolute() }.asSequence()
+    )
     val outputs = KotlinCompiler.classesDir(kotlincClassesOutput)
     val effectiveKnownPlugins: MutableList<KotlinCompilerConfig.KotlinPluginConfig> = LinkedList()
     val compiler = KotlinCompiler.create(args, env, inputs, outputs, projectRoot = state.project.root) {
       // add classpath and let caller amend args as needed
-      classpathAsList = finalizedClasspath.paths.map { it.path.toFile() }
-      incrementalCompilation = state.manifest.kotlin?.features?.incremental ?: true
+      classpathAsList = finalizedClasspath.paths.filter {
+        it.path.isDirectory() || (it.path.isRegularFile() && it.path.extension in sortedSetOf(
+          "jar",
+          "zip",
+          "klib",
+          "jmod",
+        ))
+      }.map { it.path.toFile() }
+
+      incrementalCompilation = state.manifest.kotlin?.features?.incremental != false
+      jvmTarget = effectiveJvmTarget.argValue
 
       // handle built-in plugins
       if (state.manifest.kotlin?.features?.enableDefaultPlugins != false) {
@@ -666,7 +739,9 @@ internal class JvmBuildConfigurator : BuildConfigurator {
       logging.debug { "Java or Kotlin sources detected; preparing JVM build tooling" }
       config.actionScope.apply {
         config.taskGraph.apply {
-          val javacs = if (javaSrcSet.isEmpty()) {
+          val javacs = if (javaSrcSet.isEmpty() || kotlinSrcSet.isNotEmpty()) {
+            // we don't want javac to run before kotlinc because of java/kotlin class inter-dependencies; so, if both
+            // are present, we want to run kotlinc instead, passing all sources to it.
             emptyList()
           } else {
             // skip all tests for now (these come last, and depend on mains)
@@ -692,6 +767,26 @@ internal class JvmBuildConfigurator : BuildConfigurator {
                 state,
                 config,
                 srcSet,
+                additionalDeps = buildList {
+                  val mainClassesOutput = state.layout.artifacts
+                    .resolve("jvm") // `.dev/artifacts/jvm/...`
+                    .resolve("classes") // `.../classes/...`
+                    .resolve("main") // `.../classes/main/...`
+
+                  if (mainClassesOutput.exists()) add(mainClassesOutput)
+
+                  val codegenClassesOutput = state.layout.artifacts
+                    .resolve("jvm") // `.dev/artifacts/jvm/...`
+                    .resolve("classes") // `.../classes/...`
+                    .resolve("codegen") // `.../classes/codegen/...`
+
+                  if (codegenClassesOutput.exists()) add(codegenClassesOutput)
+                }.takeIf { it.isNotEmpty() }?.let {
+                  Classpath.from(it)
+                },
+                dependencies = buildList {
+                  addAll(javacs)
+                }
               )
             }
           }
@@ -709,7 +804,7 @@ internal class JvmBuildConfigurator : BuildConfigurator {
                 tests = true,
               ).describedBy {
                 val pluralized = if (srcSet.paths.size == 1) "source file" else "sources"
-                "Compiling ${srcSet.paths.size} Java test $pluralized"
+                "Compiling ${srcSet.paths.filter { it.path.extension == "java" }.size} Java test $pluralized"
               }.also { javacTest ->
                 addNode(javacTest)
                 if (javacs.isNotEmpty()) {
